[package]
name = "bom-strip"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Strip UTF-8/16/32 BOM bytes and stray U+FEFF code points from text before parsing or hashing. Zero deps."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/bom-strip"
homepage = "https://github.com/MukundaKatta/bom-strip"
documentation = "https://docs.rs/bom-strip"
readme = "README.md"
keywords = ["bom", "utf-8", "unicode", "strip", "encoding"]
categories = ["text-processing", "encoding"]
exclude = [".github/*", "target/*"]
